--- a/css/css.css
+++ b/css/css.css
@@ -40,18 +40,19 @@ header{
 }
 header h1{
 	font-size:120%;	/*フォントサイズの調整*/
-	color:#313131;	/*文字色の変更*/
+	color:#fff;	/*文字色の変更*/
 	padding-top: 10px;	/*文字上部に余白*/
 	padding-bottom: 10px;	/*文字下部に余白*/
 	padding-left: 20px;	/*文字左側に余白*/
 	padding-right: 20px;	/*文字右側に余白*/
 	margin-top: 20px;	/*ロゴ上部に余白*/
 	margin-bottom: 20px;	/*ロゴ下部に余白*/
-	border:1px solid #313131;	/*文字の周りに線を描く*/
+	border:1px solid orange;	/*文字の周りに線を描く*/
 	border-radius: 5px;	/*線の角に丸みを付ける*/
 	letter-spacing: 3px;	/*文字と文字の間隔をあける*/
 	font-weight:400;	/*文字の太さの変更*/
 	float: left;	/*左側にfloat*/
+	background-color: orange;
 }
 header p{
 	font-size:110%;
@@ -64,12 +65,12 @@ header p{
 #branding{
 	width: 80%;	/*横幅指定*/
 	margin-left: 10%; /*左端から20%右側に動かす*/
-	background-color: #313131; /*背景色の指定*/
+	background-color: orange; /*背景色の指定*/
 	margin-bottom: 20px;
 	overflow: hidden; /*おまじない*/
 }
 #branding p{
-	color: #fff; /*文字色の変更*/
+	color: #000; /*文字色の変更*/
 	font-size: 180%; /*フォントサイズの調整*/
 	letter-spacing: 10px; /*文字と文字の間隔をあける*/
 	line-height: 150px; /*行間の指定（ブランディングの高さを決める）*/
@@ -79,9 +80,10 @@ header p{
 /*****NAV*****/
 nav{
 	width: 100%;	/*横幅の指定*/
-	border-top: 1px solid orange;	/*上部の線の色を指定*/
-	border-bottom: 1px solid orange;	/*下部の線の色を指定*/
+	border-top: 1px solid #000;	/*上部の線の色を指定*/
+	border-bottom: 1px solid #000;	/*下部の線の色を指定*/
 	margin-bottom: 5px;	/**/
+	background-color: #fff;
 	overflow: hidden;	/*おまじない*/
 }
 nav ul{
@@ -91,13 +93,13 @@ nav ul{
 }
 nav li{
 	width: calc(100% / 4);	/*横幅の指定*/
-	border-left: 1px solid orange;	/*線を描く*/
+	border-left: 1px solid #000;	/*線を描く*/
 	box-sizing: border-box; /*線の幅をliの横幅に含める*/
 	text-align: center;	/*文字を中央に*/
 	float: left;	/*左から並べる*/
 }
 nav li:last-child{
-	border-right: 1px solid orange;	/*li要素の最後の物は右側に線を描く*/
+	border-right: 1px solid #000;	/*li要素の最後の物は右側に線を描く*/
 }
 nav a{
 	display: block;	/*1つのli全体にリンクを有効にする*/
@@ -114,6 +116,20 @@ nav a:hover{
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	transition: all 0.5s;	/*ホバー時の動きをなめらかにする*/
+}
+nav .btn{
+	color: #fff;	/*文字色の変更*/
+	/*border: 1px solid orange;	/*線を描く（ホバー時のずれを防ぐため）*/
+	background-color: orange;	/*背景色の指定*/
+	/*padding-top: 10px;	/*文字上部の余白を指定*/
+	/*padding-bottom: 10px;	/*文字下部の余白を指定*/
+	/*padding-right: 30px;	/*文字右側の余白を指定*/
+	/*padding-left: 30px;	/*文字左側の余白を指定*/
+	/*border-radius: 5px;	/*線の角を丸くする*/
+	/*letter-spacing: 5px;	/*文字と文字の間隔をあける*/
+	/*text-decoration: none;	/*ブラウザ標準のリンク装飾をオフに*/
+	/*overflow: hidden;	/*おまじない*/
+/*	float: right;	/*フロートする*/
 }
 
 /*****ARTICLE*****/
